@@ -11,7 +11,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20150721014528) do
+ActiveRecord::Schema.define(:version => 20150728194158) do
 
   create_table "activities", :force => true do |t|
     t.integer  "trackable_id"
